fixing hero spacing

--- a/assets/stylesheets/travel.css
+++ b/assets/stylesheets/travel.css
@@ -43,7 +43,7 @@ and use @import to include in this style sheet. The font in the image is "Banger
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-family: 'Amatic SC', cursive;
   text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
   z-index: -1;
